--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Anta&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>VALAGALA\/CALORIE COUNTER</title>
   </head>
@@ -17,7 +23,7 @@
             min="0"
             id="budget"
             class="budget-form"
-            placeholder="Daily calorie budget"
+            placeholder=" Daily Calorie Budget"
             required
           />
 
